infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client # selector for services
    spec:
      containers:
        - name: client
          image: cristhiankr/client
          # ports:
          #   - containerPort: 4000

--- # create objects into to the same yml file
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  #type: by default k8s create a ClusterIP
  # type: NodePort
  selector:
    app: client #*
  ports:
    - name: client # only for login propose
      protocol: TCP
      port: 3000 # service port (revice and delivers to targetPort)
      targetPort: 3000 # pod port
