infra/k8s/comments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments # is a label
  template:
    metadata:
      labels:
        app: comments # selector for services
    spec:
      containers:
        - name: comments
          image: cristhiankr/comments
          # ports:
          #   - containerPort: 4000

--- # create objects into to the same yml file
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  #type: by default k8s create a ClusterIP
  selector:
    app: comments #*
  ports:
    - name: comments # only for login propose
      protocol: TCP
      port: 4001 # service port (revice and delivers to targetPort)
      targetPort: 4001 # pod port
