infra/k8s/event-bus-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: NodePort
  selector:
    app: event-bus
  ports:
    - name: event-bus # only for login propose
      protocol: TCP
      port: 4000 # service port (revice and delivers to targetPort)
      targetPort: 4000 # pod port
