infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation # selector for services
    spec:
      containers:
        - name: moderation
          image: cristhiankr/moderation
          # ports:
          #   - containerPort: 4000

--- # create objects into to the same yml file
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  #type: by default k8s create a ClusterIP
  selector:
    app: moderation #*
  ports:
    - name: moderation # only for login propose
      protocol: TCP
      port: 4003 # service port (revice and delivers to targetPort)
      targetPort: 4003 # pod port
