infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector: # all pods with label posts, that metadata->label
    app: posts
  ports:
    - name: posts # only for login propose
      protocol: TCP
      port: 4000 # service port (revice and delivers to targetPort)
      targetPort: 4000 # pod port
