infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query # selector for services
    spec:
      containers:
        - name: query
          image: cristhiankr/query
          # ports:
          #   - containerPort: 4000

--- # create objects into to the same yml file
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  #type: by default k8s create a ClusterIP
  selector:
    app: query #*
  ports:
    - name: query # only for login propose
      protocol: TCP
      port: 4000 # service port (revice and delivers to targetPort)
      targetPort: 4000 # pod port
